rewrite view menu: move addons out of main view to popups

--- a/orders/static/orders/style.css
+++ b/orders/static/orders/style.css
@@ -66,6 +66,13 @@ body {
 	background-color: rgba(0, 0, 0, 0.8);
 }
 
+.icon {
+	height: 1em;
+}
+
+.icon:hover {
+	background-color: red;
+}
 
 table {
 	border: solid;
