--- a/orders/templates/base.html
+++ b/orders/templates/base.html
@@ -9,5 +9,10 @@
 <body>
 	{% block body %}
     {% endblock %}
+    <!-- popper.js & tippy.js -->
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+	<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+	<!-- Handlebars -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 </body>
 </html>
