--- a/orders/templates/menu.html
+++ b/orders/templates/menu.html
@@ -20,9 +20,10 @@
 							{% if forloop.counter0 == 0%}
 								{{ item }}
 							{% elif item.allowed_addons.count == 0 %}
-								<form method="POST" action="/">
+								<form class="add-to-cart-form">
 								{% csrf_token %}
 								{{ item.price }}
+								<input type="hidden" name="item_id" value={{ item.id }}>
 								<input type="image" class="icon add-to-cart-btn" 
 								src="{% static 'orders/icons/square-plus.png' %}" alt="Submit Form" />
 								</form>
