add render cart. change api order detail

--- a/orders/templates/menu.html
+++ b/orders/templates/menu.html
@@ -44,7 +44,10 @@
 			</table>
 		</div>
 		<div id="sidebar-right" class="container sidebar">
-			<h1>Cart</h1>
+			<div id="cart-container">
+				<h2>Cart</h2>
+				<div id="cart-body"></div>
+			</div>
 		</div>
 	</div> 
 	<script type="module" src="{% static 'orders/menu.js' %}"></script>
