--- a/orders/templates/order_update.html
+++ b/orders/templates/order_update.html
@@ -7,7 +7,7 @@
 		<tr>
 			<td>#</td>
 			<td>Item</td>
-			<td>Price</td>
+			<td>Base Price</td>
 			<td>Total Price</td>
 			<td></td>
 		</tr>
@@ -60,18 +60,30 @@
 
 	<h3 id="total-order-price">Total: <h3>
 
-	<form method="post" action={% url "update_order" %}>
+	<form method="post" action={% url "place_order" %}>
 		{% csrf_token %}
-		<label>Select existing address</label>
+		<input type="hidden" name="order" value="{{ order.id }}">
+		<label>
+			Select existing address:
+		</label>
 		</br>
 		<select name="address">
 			{% for address in addresses %}
 				<option value={{address.id}}>{{ address }}</option>
 			{% endfor %}
 		</select>
+		<label><br>or add <a href="{% url "create_address" %}">a new one</a><br></label>
 		</br>
-		<label>or add <a href="{% url "create_address" %}">a new one</a></label>
-		</br>
+		<label>Select payment method:<br></label>
+		<select name="payment-method">
+			{% for pm in payment_methods %}
+				<option value="{{ pm.0 }}">{{ pm.1 }}</option>
+			{% endfor %}
+		</select>
+		<br><br>
+		<label>Add order comments:<br></label>
+		<textarea name="order-comments"></textarea>
+		<br><br>
 		<input type="submit" value="Place Order">
 	</form>
 </div>
