--- a/orders/templates/base.html
+++ b/orders/templates/base.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 	<title>{% block title %}{% endblock %}</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'orders/style.css' %}"/>
 </head>
 <body>
