--- a/orders/templates/cart.html
+++ b/orders/templates/cart.html
@@ -1,7 +1,7 @@
 <div id="sidebar-right" class="container sidebar">
 	<div id="cart-container">
-		<a href="{% url 'place_order' %}">
-			<div id="cart-header" class="btn">
+		<a href="{% url 'place_order' %}" title="Proceed to Checkout">
+			<div id="cart-header">
 				Cart	
 			</div>
 		</a>
