--- a/orders/templates/base.html
+++ b/orders/templates/base.html
@@ -12,7 +12,7 @@
 
 	<div id="top-navbar">
 			<a href="{% url 'index' %}">Menu</a>
-			<a href="{% url 'index' %}">Orders</a>
+			<a href="{% url 'orders' %}">Orders</a>
 			<a href="{% url 'logout' %}">Log out ({{ user }})</a>
 	</div>
 	{% endif %}
