fix bug with cart not being refreshed after item with addons added

--- a/orders/templates/category-nav.html
+++ b/orders/templates/category-nav.html
@@ -1,5 +1,20 @@
 <div id="sidebar" class="container">
 	{% for category in categories %}
+	<ul>
+		<li>
+			<a href="{% url 'menu' category.id %}">
+			{{ category.name }}
+			</a>
+		</li>
+	</ul>
+
+	{% endfor %}
+</div>
+
+
+
+<!-- <div id="sidebar" class="container">
+	{% for category in categories %}
 	
 	<a href="{% url 'menu' category.id %}">
 		<div class="category-btn">
@@ -11,3 +26,4 @@
 	{% endfor %}
 </div>
 
+ -->
