refactor orders.views/utils

--- a/orders/templates/cart.html
+++ b/orders/templates/cart.html
@@ -5,7 +5,7 @@
 				Cart	
 			</div>
 		</a>
-		<div id="cart-body">Loading...</div>
+		<div id="cart-body">Your cart is empty.</div>
 		<div id="cart-footer">
 			<a href="{% url 'place_order' %}">
 				<button id="checkout-btn" disabled="true">Proceed to Checkout</button>
