--- a/orders/templates/place_order.html
+++ b/orders/templates/place_order.html
@@ -10,29 +10,21 @@
 			<td>Item</td>
 			<td>
 				Base Price
-				<i 
-					class="fa fa-info-circle" 
-					data-tippy-content="Price without addons.">
-				</i>
+				<i class="fa fa-info-circle" data-tippy-content="Price without addons."></i>
 			</td>
 			<td>
-			Total Price
-			<i 
-				class="fa fa-info-circle" 
-				data-tippy-content="Price with addons.">
-			</i>
+				Total Price
+				<i class="fa fa-info-circle" data-tippy-content="Price with addons."></i>
 			</td>
 			<td></td>
 		</tr>
 		<tr>
 			<td colspan="4">Your cart is empty</td>
 		</tr>
-
 	</table>
 	</div>
 	<h2 id="total-order-price"><h2>
-
-	<form method="post" action={% url "place_order" %}>
+	<form method="post" action={% url 'place_order' %}>
 		{% csrf_token %}
 		<ol>
 		<div class="fieldWrapper">
