new buttons and other small styling changes

--- a/orders/templates/_cart.html
+++ b/orders/templates/_cart.html
@@ -8,7 +8,7 @@
 		<div id="cart-body">Your cart is empty.</div>
 		<div id="cart-footer">
 			<a href="{% url 'place_order' %}">
-				<button id="checkout-btn" disabled="true">Proceed to Checkout</button>
+				<button id="checkout-btn" class="basic-btn" disabled="true">Proceed to Checkout</button>
 			</a>
 		</div>
 	</div>
