--- a/orders/templates/base.html
+++ b/orders/templates/base.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}{% endblock %}</title>
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,6 +24,9 @@
 	</div>
 	{% block body %}
     {% endblock %}
+    <script type="text/javascript">
+    	window.addEventListener('unhandledrejection', (e) => alert(e.reason));
+    </script>
     <!-- popper.js & tippy.js -->
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
