--- a/orders/templates/place_order.html
+++ b/orders/templates/place_order.html
@@ -61,7 +61,7 @@
 	        {% endif %}
    		</div>
    		</ol>
-		<input type="submit" value="Place Order">
+		<input type="submit" value="Place Order" class="basic-btn">
 	</form>
 </div>
 <script type="module" src="{% static 'orders/place_order.js' %}"></script>
