--- a/orders/static/orders/style.css
+++ b/orders/static/orders/style.css
@@ -33,6 +33,22 @@ button {
 button:disabled {
 	cursor: not-allowed;
 }
+.basic-btn {
+  background-color: #e7e7e7; 
+  border: none;
+  color: black;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 0.75rem;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.basic-btn:hover {
+  background-color: #f28f3b; 
+  color: black;
+}
 #main-container {
 	position: absolute;
 	top: 7.5%;
