--- a/orders/templates/create_address.html
+++ b/orders/templates/create_address.html
@@ -5,7 +5,7 @@
 	<form method="post">
 		{% csrf_token %}
 	    {{ form.as_p }}
-	    <input type="submit" value="Add">
+	    <input type="submit" value="Add" class="basic-btn">
 	</form>
 </div>
 {% endblock %}
