--- a/orders/templates/_base.html
+++ b/orders/templates/_base.html
@@ -19,6 +19,7 @@
 			<li><a href="{% url 'logout' %}">Log out ({{ user }})</a></li>
 			{% else %}
 			<li><a href="{% url 'login' %}">Log in</a></li>
+			<li><a href="{% url 'signup' %}">Sign up</a></li>
 			{% endif %}
 		</ul>
 	</div>
