--- a/orders/templates/login.html
+++ b/orders/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 
 {% block body %}
 
@@ -14,6 +14,7 @@
 	    <input name="username" type="text"/>
 	    <input name="password" type="password"/>
 	    <input type="submit" value="Login"/>
+	    <p>Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
 	</form>
 </div>
 {% endblock %}
