--- a/orders/templates/signup.html
+++ b/orders/templates/signup.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div id="main-container" class="container">
 	<h2>Sign Up</h2>
-		<form method="post">
+		<form method="post" id="sign-up-form">
 			  {% csrf_token %}
 			  {{ form.as_p }}
 			  <button type="submit">Sign Up</button>
